<resources>
    <string name="app_name">TravAlong</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_popular_places">Popular Places</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_followers">FollowersActivity</string>
    <string name="title_followers">Followers</string>
    <string name="logout_options">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="search_label">Search for other people from TravAlong</string>
    <string name="search_edit_text_hint">Search by Friends Name</string>
    <string name="find_btn_text">Find</string>
    <string name="follower_name">John Doe</string>
    <string name="follower_status">This is my status</string>
    <string name="follow_btn_text">Followed</string>
    <string name="feed_text_label">Today\'s Feed</string>
    <string name="create_post_text">Hi ,User ! How are you feeling today!</string>
    <string name="post_btn_text">post</string>
    <string name="upload_btn_text">Photo</string>
    <string name="post_user_name">John Doe</string>
    <string name="post_user_location">Louis Street,CA</string>
    <string name="post_time">HH:MM PM</string>
    <string name="post_date">DD/MM/YY</string>
    <string name="post_image_cd">Post Image</string>
    <string name="post_description">Post description…</string>
    <string name="view_profile_btn_text">View Profile</string>
    <string name="post_likes_count_text">0 Likes</string>
    <string name="enter_password_label">Enter Password:</string>
    <string name="enter_username_label">Enter Username:</string>
    <string name="username_email_input">Username/Email</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="log_in_btn_text">Log In</string>
    <string name="sign_up_btn_text">Sign up</string>
    <string name="post_detail_user_name">John Doe</string>
    <string name="post_detail_loc">Louis Street,CA</string>
    <string name="post_detail_time">HH:MM PM</string>
    <string name="post_detail_date">DD/MM/YY</string>
    <string name="post_detail_like_count">0 Likes</string>
    <string name="post_detail_image_cd">Display Image</string>
    <string name="post_detail_description">Post description…</string>
    <string name="like_btn_text">Like</string>
    <string name="delete_post_btn_text">Delete Post</string>
    <string name="profile_post_image_cd">Profile Post Image</string>
    <string name="app_title">TravAlong</string>
    <string name="register_detaile_label">Enter Your Details Below</string>
    <string name="email_id_input">Email-ID</string>
    <string name="password_input">Password</string>
    <string name="confirm_password_input">Confirm Password</string>
    <string name="submit_btn_text">submit</string>
    <string name="register_details_label">Enter Your Details Below</string>
    <string name="full_name_input">Full Name</string>
    <string name="username_input">Username</string>
    <string name="contact_no_input">Contact No.</string>
    <string name="country_input">Country</string>
    <string name="status_input">Status</string>
    <string name="proceed_btn_text">Proceed</string>
    <string name="display_name_text">John Doe</string>
    <string name="username_text">(@username)</string>
    <string name="user_status_label">Hi! I am new to TravAlong</string>
    <string name="follow_btn_txt">Follow +</string>
    <string name="followers_label">Followers</string>
    <string name="level_label">Level</string>
    <string name="posts_label">Posts</string>
    <string name="followers_value">0</string>
    <string name="level_value">0</string>
    <string name="posts_value">0</string>
    <string name="image_backpath_value">Image backpath</string>
    <string name="widget_user_name">John Doe</string>
    <string name="widget_followers_label">Followers</string>
    <string name="widget_level_label">Level</string>
    <string name="widget_posts_label">Posts</string>
    <string name="widget_followers_value">0</string>
    <string name="widget_user_level">0</string>
    <string name="widget_posts_value">0</string>
    <string name="view_activity_btn">VIEW ACTIVITY</string>
    <string name="widget_likes_label">Likes</string>
    <string name="widget_user_likes">0</string>
    <string name="likes_label">Likes</string>
    <string name="likes_value">0</string>
    <string name="get_likes">Likes</string>
    <string name="value_liked">Liked!</string>
    <string name="value_like">Like</string>
    <string name="label_likes">Likes</string>
    <string name="child_users">Users</string>
    <string name="child_follow_req">Follow-Requests</string>
    <string name="child_followers">Followers</string>
    <string name="label_not_friends">not_friends</string>
    <string name="label_full_name">full_name</string>
    <string name="label_followed">FOLLOWED</string>
    <string name="label_list">list</string>
    <string name="label_username">username</string>
    <string name="label_profile_image">profileimage</string>
    <string name="login_welcome_message">Login Successful! Welcome,</string>
    <string name="login_error_message">Incorrect Email or Password!</string>
    <string name="email_required_message">Email Field Required!</string>
    <string name="pass_required_message">Password Required!</string>
    <string name="email_invalid_message">Invalid Email-ID!</string>
    <string name="child_posts">Posts</string>
    <string name="child_likes">Likes</string>
    <string name="post_deleted_message">Post Deleted Successfully!</string>
    <string name="child_full_name">full_name</string>
    <string name="child_profile_image">profileimage</string>
    <string name="child_post_image">postimage</string>
    <string name="child_date">date</string>
    <string name="child_time">time</string>
    <string name="child_description">description</string>
    <string name="user_create_message">User Created!</string>
    <string name="auth_fail_message">Authentication failed.</string>
    <string name="pass_match_error">Passwords doesn\'t match</string>
    <string name="pass_length_message">Passwords Length should be atleast 8 characters!</string>
    <string name="details_correct_message">Enter Details Correctly to Proceed!</string>
    <string name="select_profile_image_message">Please select profile image first.</string>
    <string name="uploading_message">Uploading…</string>
    <string name="image_stored_success_message">Profile Image stored to Firebase Database Successfully…</string>
    <string name="image_store_error">Error Occurred:</string>
    <string name="name_required_message">Name Field Required!</string>
    <string name="country_required_message">Country Required!</string>
    <string name="phn_required_message">Phone Number Required!</string>
    <string name="username_required_message">Username Required!</string>
    <string name="details_stored_success_message">Your Details are Registered Successfully.</string>
    <string name="details_store_error_message">Error Occurred:</string>
    <string name="key_username">username</string>
    <string name="key_full_name">full_name</string>
    <string name="key_country">country</string>
    <string name="key_phone">phone</string>
    <string name="key_status">status</string>
    <string name="key_dob">dob</string>
    <string name="key_gender">gender</string>
    <string name="key_relationship_stas">relationship_status</string>
    <string name="post_update_success_message">New Post is updated successfully.</string>
    <string name="post_update_error_message">Error Occurred while updating your post.</string>
    <string name="select_post_image_message">Please select post image…</string>
    <string name="image_more_info_message">Please say something about your image…</string>
    <string name="loading_post_message">Please wait, while we are updating your new post…</string>
    <string name="date_format">dd-MMMM-yyyy</string>
    <string name="time_format">HH:mm</string>
    <string name="storage_child_post_images">Post Images</string>
    <string name="uploaded_message">Uploaded</string>
    <string name="key_uid">uid</string>
    <string name="key_date">date</string>
    <string name="key_time">time</string>
    <string name="key_description">description</string>
    <string name="key_postimage">postimage</string>
    <string name="key_profileimage">profileimage</string>
    <string name="not_friends_label">not_friends</string>
    <string name="request_sent_label">request_sent</string>
    <string name="request_received_label">request_received</string>
    <string name="friends_label">friends</string>
    <string name="follow_btn_label">Follow +</string>
    <string name="unfollow_btn_label">UNFOLLOW</string>
    <string name="cancel_request_btn_label">Cancel Request</string>
    <string name="request_type_label">request_type</string>
    <string name="sent_label">sent</string>
    <string name="received_label">received</string>
    <string name="accept_request_btn_label">ACCEPT REQUEST</string>
    <string name="child_username">username</string>
    <string name="child_status">status</string>
    <string name="post_execute_message">Post execute</string>
    <string name="receiver_id_key">receiver_id</string>
    <string name="execute_message">Executed</string>
    <string name="child_uid">uid</string>
    <string name="failed_message">Failed</string>
    <string name="none_label">none</string>
    <string name="profile_act_pref_key">USER_PROFILE_PREF</string>
    <string name="user_name_pref_key">USER_NAME</string>
    <string name="profile_image_pref_key">USER_PROFILE_IMAGE</string>
    <string name="profile_followers_count_pref_key">USER_PROFILE_FOLLOWERS_COUNT</string>
    <string name="profile_post_count_pref_key">USER_PROFILE_POST_COUNT</string>
    <string name="profile_likes_count_pref_key">USER_PROFILE_LIKES_COUNT</string>
    <string name="create_post_hint_1">Hi ,</string>
    <string name="create_post_hint_2">! How are you feeling today!</string>
    <string name="add_new_post_message">Add New Post</string>

</resources>
