<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_profile_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/widget_user_profile_backpath"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/bg"
            android:contentDescription="@string/image_backpath_value"
            android:scaleType="centerCrop" />

    </FrameLayout>

    <TextView
        android:id="@+id/widget_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:padding="10dp"
        android:text="@string/widget_user_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_followers_label"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:padding="5dp"
            android:text="@string/widget_followers_label"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/user_likes_label"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:padding="5dp"
            android:text="@string/widget_likes_label"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/user_posts_label"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:padding="5dp"
            android:text="@string/widget_posts_label"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/widget_user_followers_value"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:padding="5dp"
            android:text="@string/widget_followers_value"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/widget_user_likes_value"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:padding="5dp"
            android:text="@string/widget_user_likes"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/widget_user_posts_value"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:padding="5dp"
            android:text="@string/widget_posts_value"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/show_user_profile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/button_rounded_border_blue"
        android:padding="10dp"
        android:text="@string/view_activity_btn"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

</LinearLayout>