<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".RegisterActivity">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">


            <ImageView
                android:id="@+id/bgImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:filterTouchesWhenObscured="false"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/bg"
                android:contentDescription="@null" />

            <View
                android:id="@+id/viewBg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_transparent" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/app_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:padding="5dp"
                    android:text="@string/app_title"
                    android:textColor="@android:color/white"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/register_details_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/register_detaile_label"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:typeface="normal"
                    app:layout_constraintEnd_toEndOf="@+id/app_title"
                    app:layout_constraintStart_toStartOf="@+id/app_title"
                    app:layout_constraintTop_toBottomOf="@+id/app_title" />

                <EditText
                    android:id="@+id/full_name_input"
                    android:layout_width="320dp"
                    android:layout_height="52dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/edit_text_rounded"
                    android:ems="10"
                    android:hint="@string/email_id_input"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_details_label" />

                <EditText
                    android:id="@+id/login_password_input"
                    android:layout_width="320dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edit_text_rounded"
                    android:ems="10"
                    android:hint="@string/password_input"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    app:layout_constraintStart_toStartOf="@+id/full_name_input"
                    app:layout_constraintTop_toBottomOf="@+id/full_name_input" />

                <EditText
                    android:id="@+id/confirm_password_input"
                    android:layout_width="320dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edit_text_rounded"
                    android:ems="10"
                    android:hint="@string/confirm_password_input"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    app:layout_constraintStart_toStartOf="@+id/login_password_input"
                    app:layout_constraintTop_toBottomOf="@+id/login_password_input" />


                <Button
                    android:id="@+id/signup_btn"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_margin="16dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/button_rounded"
                    android:padding="5dp"
                    android:text="@string/submit_btn_text"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.781"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>
        </FrameLayout>
    </LinearLayout>