<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".PostDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                app:cardElevation="3dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_photo"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/male_profile"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/post_user_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:padding="2dp"
                        android:text="@string/post_detail_user_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/post_date"
                        app:layout_constraintStart_toEndOf="@+id/profile_photo"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/post_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/post_user_name"
                        android:layout_toEndOf="@+id/profile_photo"
                        android:text="@string/post_detail_loc"
                        android:textColor="@color/black_overlay"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="@+id/post_user_name"
                        app:layout_constraintTop_toBottomOf="@+id/post_user_name" />

                    <TextView
                        android:id="@+id/post_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/post_user_name"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@+id/profile_photo"
                        android:padding="2dp"
                        android:text="@string/post_detail_time"
                        android:textColor="@color/black_overlay"
                        android:textSize="10sp"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toTopOf="@+id/post_display_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/post_date" />

                    <TextView
                        android:id="@+id/post_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/post_user_name"
                        android:layout_marginEnd="6dp"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@+id/profile_photo"
                        android:padding="2dp"
                        android:text="@string/post_detail_date"
                        android:textColor="@android:color/black"
                        android:textSize="11sp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/post_likes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/post_detail_like_count"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/post_display_image" />

                    <ImageView
                        android:id="@+id/post_display_image"
                        android:layout_width="0dp"
                        android:layout_height="350dp"
                        android:layout_marginTop="8dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/post_detail_image_cd"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profile_photo"
                        app:srcCompat="@drawable/bg" />

                    <LinearLayout
                        android:id="@+id/description_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/post_likes">

                        <TextView
                            android:id="@+id/post_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:lines="8"
                            android:maxLines="8"
                            android:minLines="5"
                            android:padding="8dp"
                            android:text="@string/post_detail_description"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/button_section"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/description_container">

                        <Button
                            android:id="@+id/post_like_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_rounded_blue"
                            android:text="@string/like_btn_text"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:textStyle="normal" />

                        <Button
                            android:id="@+id/delete_post_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/button_rounded_border_blue"
                            android:text="@string/delete_post_btn_text"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>