<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:padding="5dp"
        app:cardElevation="2dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_photo"
                android:layout_width="54dp"
                android:layout_height="57dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/male_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/user_create_post"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_rounded"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/create_post_text"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profile_photo"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/button_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/user_create_post"
                app:layout_constraintTop_toBottomOf="@+id/user_create_post">

                <Button
                    android:id="@+id/post_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_rounded_blue"
                    android:padding="2dp"
                    android:text="@string/post_btn_text"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/upload_photo_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_rounded_border_blue"
                    android:padding="2dp"
                    android:text="@string/upload_btn_text"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>